# opengl-playground

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/00_demo_viewer/: CMakeLists.txt  README.md  demo_cube.cpp  demo_model.cpp  demo_triangle.cpp  demo_viewer.cpp
apps/assets/pc_porsche/: licence.txt
apps/assets/skull/: LICENSE.txt
apps/assets/small_city/: LICENCE.txt  small_city.mtl
apps/assets/wanderer/: license.txt  wanderer.mtl  water.mtl
apps/cel_shading/: CMakeLists.txt  cel_shading.cpp
apps/cel_shading/shader/: basic.vert  cel_shading.frag  cel_shading.vert  edge_detect.frag
apps/deferred_rendering/: CMakeLists.txt  deferred_rendering.cpp
apps/deferred_rendering/shader/: debug_light.vert  gpass.frag  gpass.vert  light_dir.frag  light_dir.vert  light_spots.frag  light_spots.vert
apps/pointcloud_viewer/: CMakeLists.txt  pointcloud_viewer.cpp
apps/pointcloud_viewer/shader/: billboard.geom  billboard.vert  blinn_phong.frag
apps/reflection_probes/: CMakeLists.txt  reflection_probes.cpp
apps/reflection_probes/shader/: debug_prope.frag  refl_prope.geom  refl_prope.vert  scene.frag  scene.vert  water.frag
apps/shadow_mapping/: CMakeLists.txt  shadow_mapping.cpp
apps/shadow_mapping/shader/: blinn_phong.frag  blinn_phong.vert  shadow_map.frag  shadow_map.vert
apps/temporal_anti_aliasing/: CMakeLists.txt  temporal_anti_aliasing.cpp
apps/temporal_anti_aliasing/shader/: post.frag  render.frag  render.vert
apps/volume_raycasting/: CMakeLists.txt  volume_raycasting.cpp
apps/volume_raycasting/shader/: entry_exit.frag  entry_exit.vert  raycast.frag  simple.vert
viewer/: CMakeLists.txt  viewer.cpp  viewer.h
viewer/asset/: fwd.h  image.cpp  image.h  model.h  obj_model.h  pointcloud.h  shapes.h  texture.cpp  texture.h  volume.cpp  volume.h
viewer/asset/detail/: obj_model.h
viewer/core/: assert.h  frameclock.cpp  frameclock.h  keyboard.cpp  keyboard.h  log.cpp  log.h  mouse.cpp  mouse.h  msg.h  msg_bus.h  platform.h  time.h  window.h
viewer/glfw/: base.cpp  base.h  keyboard.cpp  keyboard.h  module.cpp  module.h  mouse.cpp  mouse.h  window.cpp  window.h
viewer/imgui/: manager.cpp  manager.h
viewer/opengl/: buffer.h  context.cpp  context.h  framebuffer.cpp  framebuffer.h  indexbuffer.h  renderbuffer.cpp  renderbuffer.h  shaderprogram.cpp  shaderprogram.h  texture.cpp  texture.h  texture3d.cpp  texture3d.h  texturecube.cpp  texturecube.h  vertexarray.cpp  vertexarray.h  vertexbuffer.h
viewer/utility/: camera.cpp  camera.h  camera_control.cpp  camera_control.h
